# DTU-R3-ROS

py_workspace/src/: fetcher.py
py_workspace/src/tst/: Roskilde-project-proposal.docx
vision/: CMakeLists.txt  package.xml
vision/src/: middle_point.cpp  middle_point_v2.cpp  vision_capture_test.cpp
